--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -371,6 +371,7 @@ section.main{
 		text-align: center;
 		padding-top: 100px;
 		img{
+			width: 100%;
 			position: absolute;
 			left: 0;
 			bottom: 0;
