--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7615,33 +7615,75 @@ section.main h3.pure {
   border: none;
 }
 /* line 393, ../sass/app.scss */
+section.main .chapter {
+  float: left;
+  border: 1px solid #ddd;
+  width: 47%;
+  min-height: 10em;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px -1px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px -1px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px -1px;
+  overflow: hidden;
+  padding: 1em;
+  margin: 5px;
+}
+/* line 402, ../sass/app.scss */
+section.main .chapter .time {
+  float: right;
+  font-size: 0.8em;
+}
+/* line 406, ../sass/app.scss */
+section.main .chapter img {
+  border-radius: 40px;
+}
+/* line 409, ../sass/app.scss */
+section.main .chapter span.right {
+  color: gray;
+  font-size: 0.8em;
+  margin-top: 1em;
+}
+/* line 414, ../sass/app.scss */
+section.main .chapter .markdown {
+  padding-top: 1em;
+}
+/* line 416, ../sass/app.scss */
+section.main .chapter .markdown h1, section.main .chapter .markdown h2, section.main .chapter .markdown h3, section.main .chapter .markdown p, section.main .chapter .markdown ul, section.main .chapter .markdown li {
+  margin: 0 0 0.4em 0;
+  padding: 0;
+  font-size: 0.9em;
+}
+/* line 421, ../sass/app.scss */
+section.main .chapter .markdown ul, section.main .chapter .markdown ul > li {
+  list-style: none;
+}
+/* line 426, ../sass/app.scss */
 section.main ul.users {
   list-style: none;
 }
-/* line 395, ../sass/app.scss */
+/* line 428, ../sass/app.scss */
 section.main ul.users li {
   margin: 12px 0;
 }
-/* line 397, ../sass/app.scss */
+/* line 430, ../sass/app.scss */
 section.main ul.users li img {
   border-radius: 25px;
   border: 5px solid white;
 }
-/* line 401, ../sass/app.scss */
+/* line 434, ../sass/app.scss */
 section.main ul.users li img.stranger {
   border-color: rgba(128, 128, 128, 0.5);
 }
-/* line 404, ../sass/app.scss */
+/* line 437, ../sass/app.scss */
 section.main ul.users li img.friend {
   border-color: rgba(93, 164, 35, 0.5);
 }
-/* line 408, ../sass/app.scss */
+/* line 441, ../sass/app.scss */
 section.main ul.users li a {
   color: #808080;
   padding-left: 12px;
   font-size: 0.9em;
 }
-/* line 414, ../sass/app.scss */
+/* line 447, ../sass/app.scss */
 section.main ul.users li:hover img {
   border-radius: 20px;
   border: none;
@@ -7652,25 +7694,25 @@ section.main ul.users li:hover img {
   transform: scale(1.2, 1.2);
   margin: 5px;
 }
-/* line 420, ../sass/app.scss */
+/* line 453, ../sass/app.scss */
 section.main ul.users li:hover a {
   color: #565656;
 }
-/* line 426, ../sass/app.scss */
+/* line 459, ../sass/app.scss */
 section.main .row {
   max-width: 100%;
   padding: 0 10px;
 }
-/* line 429, ../sass/app.scss */
+/* line 462, ../sass/app.scss */
 section.main .row.full {
   padding: 0;
 }
-/* line 433, ../sass/app.scss */
+/* line 466, ../sass/app.scss */
 section.main .editor {
   resize: none;
   line-height: 155%;
 }
-/* line 438, ../sass/app.scss */
+/* line 471, ../sass/app.scss */
 section.main .preview {
   background-color: white;
   overflow-y: scroll;
@@ -7678,53 +7720,53 @@ section.main .preview {
   font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   position: relative;
 }
-/* line 445, ../sass/app.scss */
+/* line 478, ../sass/app.scss */
 section.main .preview .inner {
   position: relative;
 }
-/* line 447, ../sass/app.scss */
+/* line 480, ../sass/app.scss */
 section.main .preview .inner * {
   position: relative;
 }
-/* line 451, ../sass/app.scss */
+/* line 484, ../sass/app.scss */
 section.main .preview h1 {
   font-size: 2em;
 }
-/* line 454, ../sass/app.scss */
+/* line 487, ../sass/app.scss */
 section.main .preview h2 {
   font-size: 1.5em;
 }
 
-/* line 459, ../sass/app.scss */
+/* line 492, ../sass/app.scss */
 .helper {
   position: absolute;
   height: 0;
   top: -100px;
 }
 
-/* line 466, ../sass/app.scss */
+/* line 499, ../sass/app.scss */
 .login-panel {
   width: 100%;
   margin-top: 20%;
   background-color: #F8F8F8;
 }
-/* line 470, ../sass/app.scss */
+/* line 503, ../sass/app.scss */
 .login-panel h3 {
   color: #444444;
   margin-bottom: 25px;
 }
-/* line 474, ../sass/app.scss */
+/* line 507, ../sass/app.scss */
 .login-panel .logins {
   margin: 10px 40px;
   text-align: center;
   height: 120px;
 }
-/* line 479, ../sass/app.scss */
+/* line 512, ../sass/app.scss */
 .login-panel .join {
   font-weight: normal;
   margin: 0 20px;
 }
-/* line 483, ../sass/app.scss */
+/* line 516, ../sass/app.scss */
 .login-panel .footline {
   height: 60px;
   margin: 2px;
@@ -7733,17 +7775,17 @@ section.main .preview h2 {
   border-bottom: 2px solid #f8f8f8;
   font-weight: normal;
 }
-/* line 490, ../sass/app.scss */
+/* line 523, ../sass/app.scss */
 .login-panel .footline a {
   font-weight: bold;
 }
-/* line 494, ../sass/app.scss */
+/* line 527, ../sass/app.scss */
 .login-panel .recommand {
   margin: 30px 60px;
   border-top: 1px solid #ccc;
   text-align: center;
 }
-/* line 498, ../sass/app.scss */
+/* line 531, ../sass/app.scss */
 .login-panel .recommand span {
   background-color: #f8f8f8;
   position: absolute;
@@ -7753,20 +7795,20 @@ section.main .preview h2 {
   top: 20px;
   padding: 0 10px;
 }
-/* line 510, ../sass/app.scss */
+/* line 543, ../sass/app.scss */
 .login-panel .form form {
   padding: 0px 30px;
   border-right: 2px solid #dbdbdb;
 }
-/* line 513, ../sass/app.scss */
+/* line 546, ../sass/app.scss */
 .login-panel .form form input {
   margin-bottom: 25px;
 }
-/* line 519, ../sass/app.scss */
+/* line 552, ../sass/app.scss */
 .login-panel .title {
   height: 40px;
 }
-/* line 522, ../sass/app.scss */
+/* line 555, ../sass/app.scss */
 .login-panel .title .close {
   display: block;
   width: 30px;
@@ -7779,11 +7821,11 @@ section.main .preview h2 {
   float: right;
   background-color: black;
 }
-/* line 534, ../sass/app.scss */
+/* line 567, ../sass/app.scss */
 .login-panel .title .close a {
   color: white;
 }
-/* line 537, ../sass/app.scss */
+/* line 570, ../sass/app.scss */
 .login-panel .title .close:hover {
   background-color: #3e3e3e;
 }
