--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -390,6 +390,39 @@ section.main{
 			border: none;
 		}
 	}
+	.chapter{
+		float: left;
+		border:1px solid #ddd;
+		width: 47%;
+		min-height: 10em;
+		@include box-shadow(rgba(0,0,0,0.1) 0 0 3px -1px);
+		overflow: hidden;
+		padding: 1em;
+		margin: 5px;
+		.time{
+			float: right;
+			font-size: 0.8em;
+		}
+		img{
+			border-radius: 40px;
+		}
+		span.right{
+			color:gray;
+			font-size: 0.8em;
+			margin-top: 1em;
+		}
+		.markdown{
+			padding-top: 1em;
+			h1, h2, h3, p, ul ,li{
+				margin: 0 0 0.4em 0;
+				padding: 0;
+				font-size: 0.9em;
+			}
+			ul,ul>li{
+				list-style: none;
+			}
+		}
+	}
 	ul.users{
 		list-style: none;
 		li{
