--- a/public/stylesheets/chapter.css
+++ b/public/stylesheets/chapter.css
@@ -7470,363 +7470,183 @@ span.shadow.shadow-right {
   border-bottom: 24px solid #fff;
 }
 
-/* line 53, ../sass/app.scss */
+/* line 17, ../sass/chapter.scss */
 html {
-  font-size: 16px;
+  height: 100%;
 }
 
-/* line 56, ../sass/app.scss */
-.template {
-  display: none !important;
+/* line 20, ../sass/chapter.scss */
+body {
+  background: white;
+  height: 100%;
 }
-
-/* line 59, ../sass/app.scss */
-input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, textarea:focus {
-  box-shadow: none;
+/* line 23, ../sass/chapter.scss */
+body .container {
+  height: 100%;
 }
-
-/* line 62, ../sass/app.scss */
-.whitewrap {
-  text-indent: -9999px;
+/* line 26, ../sass/chapter.scss */
+body .surface {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
-
-/* line 65, ../sass/app.scss */
-.shadow-box {
-  border: 1px solid #cccccc;
+/* line 33, ../sass/chapter.scss */
+body .surface .surface-inner {
+  position: relative;
+  height: 100%;
+  overflow: auto;
+}
+/* line 38, ../sass/chapter.scss */
+body .surface .surface-inner:after {
+  clear: both;
+}
+/* line 44, ../sass/chapter.scss */
+body article.user {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  z-index: 1000;
+}
+/* line 49, ../sass/chapter.scss */
+body article.user .top-bar {
+  padding: 0;
+  height: 45px;
+}
+/* line 53, ../sass/chapter.scss */
+body article.user .top-bar ul.right li {
+  margin-right: 0;
+}
+/* line 59, ../sass/chapter.scss */
+body article {
+  position: relative;
+}
+/* line 61, ../sass/chapter.scss */
+body article:after {
+  clear: both;
+  content: " ";
+}
+/* line 66, ../sass/chapter.scss */
+body .site-logo {
+  z-index: 1000;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  padding: 4px;
+  width: 40px;
+  height: 40px;
+  background-color: #f8f8f8;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 3px 1px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 3px 1px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 0 3px 1px;
+}
+/* line 77, ../sass/chapter.scss */
+body footer {
+  position: relative;
+}
+/* line 80, ../sass/chapter.scss */
+body .post-page-wrapper {
+  margin-top: 0;
+  padding-top: 120px;
+}
+/* line 84, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner {
+  max-width: 700px;
   margin: 0 auto;
 }
-
-/* line 69, ../sass/app.scss */
-.error {
-  margin: 0 10px;
-  color: red;
+/* line 87, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner h1 {
+  margin-bottom: 0.3em;
 }
-
-/* line 73, ../sass/app.scss */
-.underline a {
-  text-decoration: underline;
-  color: #7e7e7e;
-}
-
-@media screen and (min-width: 1024px) {
-  /* line 81, ../sass/app.scss */
-  body {
-    background-image: url(/img/bg.jpg);
-    background-attachment: fixed;
-    padding: 1.5em 1.5em 0 1.5em;
-  }
-  /* line 82, ../sass/app.scss */
-  body.full {
-    padding: 0;
-  }
-  /* line 84, ../sass/app.scss */
-  body.full h1 {
-    position: absolute;
-    top: 60px;
-    color: white;
-  }
-  /* line 95, ../sass/app.scss */
-  body .notice {
-    position: absolute;
-    left: 1.5em;
-    bottom: 1.5;
-    width: 150px;
-  }
-  /* line 100, ../sass/app.scss */
-  body .notice ul {
-    list-style: none;
-  }
-  /* line 102, ../sass/app.scss */
-  body .notice ul li {
-    text-align: center;
-    padding: 0.2em 0;
-    color: white;
-  }
-  /* line 106, ../sass/app.scss */
-  body .notice ul li.normal {
-    background-color: #414f5a;
-  }
-
-  /* line 113, ../sass/app.scss */
-  body.fullwidth {
-    padding: 0;
-  }
-  /* line 115, ../sass/app.scss */
-  body.fullwidth .top-bar {
-    padding: 10px 0 0 0;
-  }
-  /* line 119, ../sass/app.scss */
-  body.fullwidth section.main .row {
-    padding: 0;
-  }
-  /* line 121, ../sass/app.scss */
-  body.fullwidth section.main .row .columns {
-    padding-left: 0.3em;
-    padding-right: 0.3em;
-  }
-}
-@media screen and (max-width: 1024px) {
-  /* line 130, ../sass/app.scss */
-  body {
-    padding: 0;
-    background-image: url(/img/bg.jpg);
-  }
-}
-@media screen and (max-width: 800px) {
-  /* line 137, ../sass/app.scss */
-  ul.right {
-    display: none;
-  }
-}
-/* line 143, ../sass/app.scss */
-section.main {
-  color: #584f4f;
-  background-color: #F8F8F8;
-}
-/* line 146, ../sass/app.scss */
-section.main .welcome {
-  position: relative;
-  overflow: hidden;
-  height: 400px;
-  text-align: center;
-  padding-top: 100px;
-}
-/* line 152, ../sass/app.scss */
-section.main .welcome img {
+/* line 90, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner span.time {
+  display: block;
   width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  margin-bottom: 1em;
+  color: #b3b3b1;
 }
-/* line 158, ../sass/app.scss */
-section.main .welcome h2 {
+/* line 96, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .author {
   position: relative;
-  color: white;
-  text-shadow: 0px 0px 1px #aaaaaa;
-}
-/* line 164, ../sass/app.scss */
-section.main h3 {
-  font-size: 1.4em;
-  padding-bottom: 15px;
-  margin: 15px 0;
-  border-bottom: 1px solid #69bed7;
-}
-/* line 169, ../sass/app.scss */
-section.main h3.pure {
-  border: none;
-}
-/* line 173, ../sass/app.scss */
-section.main .chapter {
+  width: 160px;
+  margin-left: -230px;
   float: left;
-  border: 1px solid #ddd;
-  width: 47%;
-  min-height: 10em;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px -1px;
-  -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px -1px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px -1px;
-  overflow: hidden;
-  padding: 1em;
-  margin: 5px;
+  text-align: right;
 }
-/* line 182, ../sass/app.scss */
-section.main .chapter .time {
-  float: right;
-  font-size: 0.8em;
+/* line 102, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .author img {
+  width: 70px;
+  height: 70px;
+  border-radius: 70px;
+  margin-bottom: 10px;
 }
-/* line 186, ../sass/app.scss */
-section.main .chapter img {
-  border-radius: 40px;
-}
-/* line 189, ../sass/app.scss */
-section.main .chapter span.right {
-  color: gray;
-  font-size: 0.8em;
-  margin-top: 1em;
-}
-/* line 194, ../sass/app.scss */
-section.main .chapter .markdown {
-  padding-top: 1em;
-}
-/* line 196, ../sass/app.scss */
-section.main .chapter .markdown h1, section.main .chapter .markdown h2, section.main .chapter .markdown h3, section.main .chapter .markdown p, section.main .chapter .markdown ul, section.main .chapter .markdown li {
-  margin: 0 0 0.4em 0;
-  padding: 0;
-  font-size: 0.9em;
-}
-/* line 201, ../sass/app.scss */
-section.main .chapter .markdown ul, section.main .chapter .markdown ul > li {
-  list-style: none;
-}
-/* line 206, ../sass/app.scss */
-section.main ul.users {
-  list-style: none;
-}
-/* line 208, ../sass/app.scss */
-section.main ul.users li {
-  margin: 12px 0;
-}
-/* line 210, ../sass/app.scss */
-section.main ul.users li img {
-  border-radius: 25px;
-  border: 5px solid white;
-}
-/* line 214, ../sass/app.scss */
-section.main ul.users li img.stranger {
-  border-color: rgba(128, 128, 128, 0.5);
-}
-/* line 217, ../sass/app.scss */
-section.main ul.users li img.friend {
-  border-color: rgba(93, 164, 35, 0.5);
-}
-/* line 221, ../sass/app.scss */
-section.main ul.users li a {
-  color: #808080;
-  padding-left: 12px;
-  font-size: 0.9em;
-}
-/* line 227, ../sass/app.scss */
-section.main ul.users li:hover img {
-  border-radius: 20px;
-  border: none;
-  -webkit-transform: scale(1.2, 1.2);
-  -moz-transform: scale(1.2, 1.2);
-  -ms-transform: scale(1.2, 1.2);
-  -o-transform: scale(1.2, 1.2);
-  transform: scale(1.2, 1.2);
-  margin: 5px;
-}
-/* line 233, ../sass/app.scss */
-section.main ul.users li:hover a {
-  color: #565656;
-}
-/* line 239, ../sass/app.scss */
-section.main .row {
-  max-width: 100%;
-  padding: 0 10px;
-}
-/* line 242, ../sass/app.scss */
-section.main .row.full {
-  padding: 0;
-}
-/* line 246, ../sass/app.scss */
-section.main .editor {
-  resize: none;
-  line-height: 155%;
-}
-/* line 251, ../sass/app.scss */
-section.main .preview {
-  background-color: white;
-  overflow-y: scroll;
-  color: #444444;
-  font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  position: relative;
-}
-/* line 258, ../sass/app.scss */
-section.main .preview .inner {
-  position: relative;
-}
-/* line 260, ../sass/app.scss */
-section.main .preview .inner * {
-  position: relative;
-}
-/* line 264, ../sass/app.scss */
-section.main .preview h1 {
-  font-size: 2em;
-}
-/* line 267, ../sass/app.scss */
-section.main .preview h2 {
-  font-size: 1.5em;
-}
-
-/* line 272, ../sass/app.scss */
-.helper {
-  position: absolute;
-  height: 0;
-  top: -100px;
-}
-
-/* line 279, ../sass/app.scss */
-.login-panel {
-  width: 100%;
-  margin-top: 20%;
-  background-color: #F8F8F8;
-}
-/* line 283, ../sass/app.scss */
-.login-panel h3 {
-  color: #444444;
-  margin-bottom: 25px;
-}
-/* line 287, ../sass/app.scss */
-.login-panel .logins {
-  margin: 10px 40px;
-  text-align: center;
-  height: 120px;
-}
-/* line 292, ../sass/app.scss */
-.login-panel .join {
-  font-weight: normal;
-  margin: 0 20px;
-}
-/* line 296, ../sass/app.scss */
-.login-panel .footline {
-  height: 60px;
-  margin: 2px;
-  padding: 15px;
-  background-color: #ccc;
-  border-bottom: 2px solid #f8f8f8;
-  font-weight: normal;
-}
-/* line 303, ../sass/app.scss */
-.login-panel .footline a {
+/* line 108, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .author a {
+  color: #333332;
+  line-height: 1.2;
   font-weight: bold;
 }
-/* line 307, ../sass/app.scss */
-.login-panel .recommand {
-  margin: 30px 60px;
-  border-top: 1px solid #ccc;
-  text-align: center;
+/* line 112, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .author a:hover {
+  color: #5ebbc2;
 }
-/* line 311, ../sass/app.scss */
-.login-panel .recommand span {
-  background-color: #f8f8f8;
+/* line 116, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .author .publish-time {
+  padding: 0;
+  padding-top: 10px;
+  margin-top: 0;
+  position: relative;
+  color: #666665;
+  font-size: 14px;
+  margin-top: 40px;
+}
+/* line 125, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .author .publish-time:before {
+  content: '';
+  width: 40px;
+  height: 1px;
+  background: #dededc;
   position: absolute;
-  color: #888;
-  font-weight: normal;
-  left: 30%;
-  top: 20px;
-  padding: 0 10px;
+  top: 0;
+  right: 0;
 }
-/* line 323, ../sass/app.scss */
-.login-panel .form form {
-  padding: 0px 30px;
-  border-right: 2px solid #dbdbdb;
+/* line 134, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .author .publish-time strong {
+  color: #333332;
+  font-size: 14px;
 }
-/* line 326, ../sass/app.scss */
-.login-panel .form form input {
-  margin-bottom: 25px;
+/* line 142, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .body h1 {
+  margin: 0.1em 0 1.6em 0;
+  font-size: 2em;
 }
-/* line 332, ../sass/app.scss */
-.login-panel .title {
-  height: 40px;
+/* line 146, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .body h2 {
+  margin: 0.1em 0 1.6em 0;
+  font-size: 1.6em;
 }
-/* line 335, ../sass/app.scss */
-.login-panel .title .close {
-  display: block;
-  width: 30px;
-  height: 30px;
-  font-size: 20px;
-  line-height: 10px;
-  padding: 8px;
-  font-family: Arial;
-  cursor: pointer;
+/* line 150, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .body h3 {
+  margin: 0.1em 0 1.5em 0;
+  font-size: 1.2em;
+}
+/* line 154, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .body h4 {
+  font-size: 1em;
+}
+/* line 157, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .body span.time {
   float: right;
-  background-color: black;
+  margin: 0.6em 0;
 }
-/* line 347, ../sass/app.scss */
-.login-panel .title .close a {
-  color: white;
+/* line 161, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .body p, body .post-page-wrapper .post-page-inner .body pre {
+  font-size: 1em;
+  margin-bottom: 1.5em;
 }
-/* line 350, ../sass/app.scss */
-.login-panel .title .close:hover {
-  background-color: #3e3e3e;
+/* line 165, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .body ul {
+  list-style: none;
 }
